# DLL

./: CMakeLists.txt  requirements.txt  setup.py
.virtual_documents/notebooks/: DL_9.ipynb
notebooks/: DL_10.ipynb  DL_2.ipynb  DL_3.ipynb  DL_4.ipynb  DL_5.ipynb  DL_6.ipynb  DL_7.ipynb  DL_8.ipynb  DL_9.ipynb  DimensionalityReduction.ipynb  FeatureSelectionAndSparseLearning.ipynb  IntensiveLearning.ipynb  LogisticRegression.ipynb  ProbabilityGraphModel.ipynb  RulesLearning.ipynb  Semi-supervised learning.ipynb  article.ipynb  cpp_mlp.cpp  mlp.pth  mlpTest.py  mydict.pt  test.ipynb  x-file.pt
notebooks/.ipynb_checkpoints/: LogisticRegression-checkpoint.ipynb
